DB Patch 16. Adding draft code for accepting exposure batch tasks and running the analysis.
