# src/main/java/gov/epa/bencloud/server/database/jooq/data/tables/records/ExposureFunctionGroupRecord.java
@@ -8,8 +8,8 @@ import gov.epa.bencloud.server.database.jooq.data.tables.ExposureFunctionGroup;
 
 import org.jooq.Field;
 import org.jooq.Record1;
-import org.jooq.Record3;
-import org.jooq.Row3;
+import org.jooq.Record4;
+import org.jooq.Row4;
 import org.jooq.impl.UpdatableRecordImpl;
 
 
@@ -17,7 +17,7 @@ import org.jooq.impl.UpdatableRecordImpl;
  * This class is generated by jOOQ.
  */
 @SuppressWarnings({ "all", "unchecked", "rawtypes" })
-public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFunctionGroupRecord> implements Record3<Integer, String, String> {
+public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFunctionGroupRecord> implements Record4<Integer, String, String, Integer> {
 
     private static final long serialVersionUID = 1L;
 
@@ -63,6 +63,20 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
         return (String) get(2);
     }
 
+    /**
+     * Setter for <code>data.exposure_function_group.pollutant_id</code>.
+     */
+    public void setPollutantId(Integer value) {
+        set(3, value);
+    }
+
+    /**
+     * Getter for <code>data.exposure_function_group.pollutant_id</code>.
+     */
+    public Integer getPollutantId() {
+        return (Integer) get(3);
+    }
+
     // -------------------------------------------------------------------------
     // Primary key information
     // -------------------------------------------------------------------------
@@ -73,17 +87,17 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
     }
 
     // -------------------------------------------------------------------------
-    // Record3 type implementation
+    // Record4 type implementation
     // -------------------------------------------------------------------------
 
     @Override
-    public Row3<Integer, String, String> fieldsRow() {
-        return (Row3) super.fieldsRow();
+    public Row4<Integer, String, String, Integer> fieldsRow() {
+        return (Row4) super.fieldsRow();
     }
 
     @Override
-    public Row3<Integer, String, String> valuesRow() {
-        return (Row3) super.valuesRow();
+    public Row4<Integer, String, String, Integer> valuesRow() {
+        return (Row4) super.valuesRow();
     }
 
     @Override
@@ -102,6 +116,11 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
     }
 
     @Override
+    public Field<Integer> field4() {
+        return ExposureFunctionGroup.EXPOSURE_FUNCTION_GROUP.POLLUTANT_ID;
+    }
+
+    @Override
     public Integer component1() {
         return getId();
     }
@@ -117,6 +136,11 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
     }
 
     @Override
+    public Integer component4() {
+        return getPollutantId();
+    }
+
+    @Override
     public Integer value1() {
         return getId();
     }
@@ -129,6 +153,11 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
     @Override
     public String value3() {
         return getHelpText();
+    }
+
+    @Override
+    public Integer value4() {
+        return getPollutantId();
     }
 
     @Override
@@ -150,10 +179,17 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
     }
 
     @Override
-    public ExposureFunctionGroupRecord values(Integer value1, String value2, String value3) {
+    public ExposureFunctionGroupRecord value4(Integer value) {
+        setPollutantId(value);
+        return this;
+    }
+
+    @Override
+    public ExposureFunctionGroupRecord values(Integer value1, String value2, String value3, Integer value4) {
         value1(value1);
         value2(value2);
         value3(value3);
+        value4(value4);
         return this;
     }
 
@@ -171,11 +207,12 @@ public class ExposureFunctionGroupRecord extends UpdatableRecordImpl<ExposureFun
     /**
      * Create a detached, initialised ExposureFunctionGroupRecord
      */
-    public ExposureFunctionGroupRecord(Integer id, String name, String helpText) {
+    public ExposureFunctionGroupRecord(Integer id, String name, String helpText, Integer pollutantId) {
         super(ExposureFunctionGroup.EXPOSURE_FUNCTION_GROUP);
 
         setId(id);
         setName(name);
         setHelpText(helpText);
+        setPollutantId(pollutantId);
     }
 }
